# xcm-simulator

./: Cargo.toml  README.md
.github/workflows/: checks.yml
example/: Cargo.toml
example/src/: integration_tests.rs  main.rs  relay.rs
src/: lib.rs  parachain.rs  relay_chain.rs  traits.rs
tests/: Cargo.toml
tests/src/: main.rs
xcm-emulator/: Cargo.toml
xcm-emulator/example/: Cargo.toml
xcm-emulator/example/src/: lib.rs
xcm-emulator/src/: lib.rs
xcm-emulator/yayoi/: Cargo.toml
xcm-emulator/yayoi/src/: lib.rs
xcm-simulator/: Cargo.toml
xcm-simulator/example/: Cargo.toml
xcm-simulator/example/src/: main.rs  para.rs  relay.rs
xcm-simulator/src/: integration.rs  lib.rs  parachain.rs  relay_chain.rs  traits.rs
