[package]
name = "xcm-emulator"
description = "Test kit to emulate cross-chain message passing and XCM execution"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
paste = "1.0.5"
quote = "1.0.23"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
