[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1" }
paste = "1.0.5"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.9" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.9" }
